app/assets/css/utilities.less
.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.text--dotted-underline {
  border-bottom: 1px dotted rgba(255, 255, 255, .4);
}

.text--light {
  font-weight: 100;
}

.cursor-pointer {
  cursor: pointer;
}

